Swagger is now standardized with right req and res.
